kubernets/app/destinations.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: router
spec:
  host: router
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: handler
spec:
  host: handler
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: broker
spec:
  host: broker
  subsets:
    - name: v1
      labels:
        version: v1
---
