kubernets/app/proxy-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: proxy-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
    - "*"
  gateways:
    - proxy-gateway
  http:
    - match:
        - uri:
            exact: /renew
        - uri:
            prefix: /ws
      route:
        - destination:
            host: router
            port:
              number: 9080
